# fastapi_todo

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  README.txt  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
app/: main.py
app/api/: deps.py
app/api/v1/endpoints/: auth.py  tasks.py  users.py  web.py
app/celery/: app.py  email.py
app/core/: config.py  redis.py  security.py
app/crud/: task.py  user.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 12a5204d0e60_fix_updated_at.py  218d794c8095_update_user.py  4101d787c4b2_fix_updated_at.py  4aedc72b4ef0_init_users_table.py  5a43617f3526_restore_server_default_for_updated_at.py  675c73b9995f_add_default_to_updated_at.py  81c9cf8865ff_add_tasks_table.py  84fae5995a26_fix_updated_at.py  8b39e6ceb0cd_add_server_default_to_tasks_updated_at.py  a86624db00e8_add_tasks_table.py  c525b5f069e1_fix_updated_at_default.py  ea70e6868739_restore_server_default_for_updated_at.py  ebaa0513e941_remove_default_from_updated_at.py
app/models/: task.py  user.py
app/schemas/: task.py  user.py
app/templates/: base.html
app/templates/auth/: login.html  register.html
app/templates/tasks/: create.html  dashboard.html  edit.html
tests/: conftest.py  test_auth.py  test_task.py
